--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, 'Home') %>
+<% provide(:title, 'Contact') %>
 
   
-<h1>Sample App</h1>
+<h1>Contact</h1>
 <p>
   Here we go starting this Sample App
 </p>
